...
        android:hint="@string/sample_fragment_hint"
        app:boxStrokeColor="@color/primary_blue"
        app:hintTextColor="@color/primary_blue"
        app:layout_constraintTop_toBottomOf="@id/tvSampleSubtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_sampling_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

...
