...
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="Ok"
            app:backgroundTint="@color/primary_light_blue"
            app:rippleColor="@color/primary_blue"
            android:textColor="@color/primary_blue" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
...
