...
                android:layout_weight="1"
                android:nestedScrollingEnabled="true"
                tools:itemCount="8"
                tools:listitem="@layout/entrant_list_item" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/entrants_list_sample_btn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/entrants_list_sample_button" />
        </LinearLayout>
...
